# inspect_modal_sandbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/inspect_modal_sandbox/: __init__.py  _compose.py  _modal_sandbox_environment.py
tests/inspect_modal_sandbox_test/: test_cleanup.py  test_compose.py  test_eval.py  test_sandbox_self_check.py
